<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/light_blue"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            style="@style/UdacityButton.Orange"/>

        <Button
            android:id="@+id/btn_super_duo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/super_duo"
            style="@style/UdacityButton.Orange"
            />

        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            style="@style/UdacityButton.Orange"/>

        <Button
            android:id="@+id/btn_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            style="@style/UdacityButton.Orange"/>

        <Button
            android:id="@+id/btn_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            style="@style/UdacityButton.Red"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </LinearLayout>

</LinearLayout>
